--- a/PTSpark/introToSpark.ipynb
+++ b/PTSpark/introToSpark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -32,17 +32,17 @@
       "  │ exit code: 1\n",
       "  ╰─> [15 lines of output]\n",
       "      Traceback (most recent call last):\n",
-      "        File \"d:\\BINUS\\BLUEJACK_nar\\04. Post Training\\29. Big Data Processing\\Materi\\PTSpark\\.venv\\lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 353, in <module>\n",
+      "        File \"d:\\BINUS\\BLUEJACK_nar\\04. Post Training\\29. Big Data Processing\\Qualif\\NJ Answer\\Case 2\\.venv\\lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 353, in <module>\n",
       "          main()\n",
-      "        File \"d:\\BINUS\\BLUEJACK_nar\\04. Post Training\\29. Big Data Processing\\Materi\\PTSpark\\.venv\\lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 335, in main\n",
+      "        File \"d:\\BINUS\\BLUEJACK_nar\\04. Post Training\\29. Big Data Processing\\Qualif\\NJ Answer\\Case 2\\.venv\\lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 335, in main\n",
       "          json_out['return_val'] = hook(**hook_input['kwargs'])\n",
-      "        File \"d:\\BINUS\\BLUEJACK_nar\\04. Post Training\\29. Big Data Processing\\Materi\\PTSpark\\.venv\\lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 149, in prepare_metadata_for_build_wheel\n",
+      "        File \"d:\\BINUS\\BLUEJACK_nar\\04. Post Training\\29. Big Data Processing\\Qualif\\NJ Answer\\Case 2\\.venv\\lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 149, in prepare_metadata_for_build_wheel\n",
       "          return hook(metadata_directory, config_settings)\n",
-      "        File \"C:\\Users\\vince\\AppData\\Local\\Temp\\pip-build-env-6xx8ym67\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 380, in prepare_metadata_for_build_wheel\n",
+      "        File \"C:\\Users\\vince\\AppData\\Local\\Temp\\pip-build-env-qckx22k3\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 380, in prepare_metadata_for_build_wheel\n",
       "          self.run_setup()\n",
-      "        File \"C:\\Users\\vince\\AppData\\Local\\Temp\\pip-build-env-6xx8ym67\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 488, in run_setup\n",
+      "        File \"C:\\Users\\vince\\AppData\\Local\\Temp\\pip-build-env-qckx22k3\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 488, in run_setup\n",
       "          self).run_setup(setup_script=setup_script)\n",
-      "        File \"C:\\Users\\vince\\AppData\\Local\\Temp\\pip-build-env-6xx8ym67\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 338, in run_setup\n",
+      "        File \"C:\\Users\\vince\\AppData\\Local\\Temp\\pip-build-env-qckx22k3\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 338, in run_setup\n",
       "          exec(code, locals())\n",
       "        File \"<string>\", line 156, in <module>\n",
       "      AttributeError: module 'pypandoc' has no attribute 'convert'\n",
@@ -57,18 +57,120 @@
       "note: This is an issue with the package mentioned above, not pip.\n",
       "hint: See above for details.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pyspark==2.4.4 (from pyspark[sql]==2.4.4)\n",
+      "  Using cached pyspark-2.4.4.tar.gz (215.7 MB)\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Installing backend dependencies: started\n",
+      "  Installing backend dependencies: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'error'\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  × Preparing metadata (pyproject.toml) did not run successfully.\n",
+      "  │ exit code: 1\n",
+      "  ╰─> [15 lines of output]\n",
+      "      Traceback (most recent call last):\n",
+      "        File \"d:\\BINUS\\BLUEJACK_nar\\04. Post Training\\29. Big Data Processing\\Qualif\\NJ Answer\\Case 2\\.venv\\lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 353, in <module>\n",
+      "          main()\n",
+      "        File \"d:\\BINUS\\BLUEJACK_nar\\04. Post Training\\29. Big Data Processing\\Qualif\\NJ Answer\\Case 2\\.venv\\lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 335, in main\n",
+      "          json_out['return_val'] = hook(**hook_input['kwargs'])\n",
+      "        File \"d:\\BINUS\\BLUEJACK_nar\\04. Post Training\\29. Big Data Processing\\Qualif\\NJ Answer\\Case 2\\.venv\\lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 149, in prepare_metadata_for_build_wheel\n",
+      "          return hook(metadata_directory, config_settings)\n",
+      "        File \"C:\\Users\\vince\\AppData\\Local\\Temp\\pip-build-env-6mam_uoj\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 380, in prepare_metadata_for_build_wheel\n",
+      "          self.run_setup()\n",
+      "        File \"C:\\Users\\vince\\AppData\\Local\\Temp\\pip-build-env-6mam_uoj\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 488, in run_setup\n",
+      "          self).run_setup(setup_script=setup_script)\n",
+      "        File \"C:\\Users\\vince\\AppData\\Local\\Temp\\pip-build-env-6mam_uoj\\overlay\\Lib\\site-packages\\setuptools\\build_meta.py\", line 338, in run_setup\n",
+      "          exec(code, locals())\n",
+      "        File \"<string>\", line 156, in <module>\n",
+      "      AttributeError: module 'pypandoc' has no attribute 'convert'\n",
+      "      [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "error: metadata-generation-failed\n",
+      "\n",
+      "× Encountered error while generating package metadata.\n",
+      "╰─> See above for output.\n",
+      "\n",
+      "note: This is an issue with the package mentioned above, not pip.\n",
+      "hint: See above for details.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package           Version\n",
+      "----------------- -------\n",
+      "backcall          0.2.0\n",
+      "colorama          0.4.6\n",
+      "debugpy           1.7.0\n",
+      "decorator         5.1.1\n",
+      "entrypoints       0.4\n",
+      "ipykernel         6.16.2\n",
+      "ipython           7.34.0\n",
+      "jedi              0.19.1\n",
+      "jupyter_client    7.4.9\n",
+      "jupyter_core      4.12.0\n",
+      "matplotlib-inline 0.1.6\n",
+      "nest-asyncio      1.6.0\n",
+      "packaging         23.2\n",
+      "parso             0.8.3\n",
+      "pickleshare       0.7.5\n",
+      "pip               23.3.2\n",
+      "prompt-toolkit    3.0.43\n",
+      "psutil            5.9.8\n",
+      "Pygments          2.17.2\n",
+      "python-dateutil   2.8.2\n",
+      "pywin32           306\n",
+      "pyzmq             25.1.2\n",
+      "setuptools        41.2.0\n",
+      "six               1.16.0\n",
+      "tornado           6.2\n",
+      "traitlets         5.9.0\n",
+      "wcwidth           0.2.13\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
     }
    ],
    "source": [
     "%pip install pyspark==2.4.4\n",
-    "# %pip install pyspark[sql]==2.4.4"
+    "%pip install pyspark[sql]==2.4.4\n",
+    "%pip list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyspark'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12260\\2545084145.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mpyspark\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mcontext\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyspark'"
+     ]
+    }
+   ],
    "source": [
     "from pyspark import SparkContext\n",
     "context = SparkContext()"
